--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Lambda Times</title>
   <link rel="icon" href="favicon.ico">
   <link href="index.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <script defer src="index.js" ></script>
+  <script src="index.js" defer></script>
 </head>
 
 <body>
@@ -24,18 +23,14 @@
       </div>
     </div>
   </div>
-
   <div class="header-container">
     <!-- index.js injects the header here -->
   </div>
-
   <div class="tabs-container">
     <!-- index.js injects the tabs here -->
   </div>
-
   <div class="cards-container">
     <!-- index.js injects the cards here -->
   </div>
 </body>
-
 </html>
